[workspace]
members = [
    "bin/*",
    "crates/*",
]
default-members = ["bin/relayer"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/developeruche/gasless-relayer"


[workspace.dependencies]
tokio = { version="1.40.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio-util = "0.7.12"
tracing = "0.1.40"
futures = "0.3.28"
futures-util = "0.3.28"
async-trait = "0.1.73"
primitives = { path = "crates/primitives" }
relay = { path = "crates/relay" }
tower-http = { version = "0.5.2", features = ["cors"] }