[package]
name = "monitor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
primitives.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
chrono.workspace = true