[package]
name = "primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
alloy.workspace = true
axum.workspace = true
serde_json.workspace = true
postgres.workspace = true
tokio-postgres.workspace = true
anyhow.workspace = true
tokio.workspace = true