[package]
name = "relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
primitives.workspace = true
tokio.workspace = true
tower-http.workspace = true
axum.workspace = true
tracing.workspace = true
sqlx.workspace = true