[package]
name = "tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
async-trait.workspace = true